--- a/test.html
+++ b/test.html
@@ -10,6 +10,9 @@
         <h3>testing</h3>
         <h3>이름:Dookyung</h3>
         <img src="./images/main_4.jpg" width="450" height="300" alt="desk">
+        <br>
+        <h3>팀원:Gildong</h3>
+        <img src="./images/a1.png" width="450" height="300" alt="desk">
     </div>
 </body>
 </html>
